tests/js_error/source_locations/expression/call/basic.exp
Error: This is an error
   ┌ tests/js_error/source_locations/expression/call/basic.js:10:9
   |
10 |   throw new Error('This is an error');
   |         ^
Stack trace:
  at baz (tests/js_error/source_locations/expression/call/basic.js:10:9)
  at bar (tests/js_error/source_locations/expression/call/basic.js:6:3)
  at foo (tests/js_error/source_locations/expression/call/basic.js:2:3)
  at <global> (tests/js_error/source_locations/expression/call/basic.js:13:1)